--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  font-size: 16px;
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
 }
@@ -13,16 +12,17 @@ a {
 }
 
 a:visited {
-  color: rgba(0, 0, 0, 0.877);
+  color: rgba(255, 255, 255, 0.589);
 }
 
 a:hover {
-  color: rgb(96, 116, 105);
+  color: rgb(107, 119, 112);
 }
 
 header {
   display: flex;
-  width: 100%;
+  flex-wrap: wrap;
+  /* width: 100%; */
   height: 4.5rem;
   background-color: rgba(0, 0, 0, 0.877);
   color: rgba(255, 255, 255, 0.89);
@@ -30,7 +30,7 @@ header {
 }
 
 nav ul {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   list-style-type: none;
   justify-content: space-evenly;
@@ -53,26 +53,24 @@ nav ul li {
 #splash {
   display: flex;
   width: 100%;
-  height: 25rem;
-  background-color: rgb(96, 116, 105);
+  height: fit-content;
+  background-color: rgb(107, 119, 112);
 }
 
 h1 {
-  width: 100%;
-  height: fit-content;
-  font-size: 5rem;
-  margin: auto 2.5rem;
-  border-right: 2px solid rgba(0, 0, 0, 0.877);
-  font-family: 'Unbounded', cursive;
+  font-size: 6rem;
+  padding: 2.5rem .5rem 2.5rem 2.5rem;
 }
 
 #splash div {
-  margin: auto 2.5rem;
-  padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 0 1rem 1rem;
+  justify-content: center;
 }
 
 #splash p {
-  font-size: 1.25rem;
+  font-size: 1.4rem;
   font-weight: bold;
 }
 
@@ -85,7 +83,8 @@ h1 {
 h2 {
   padding: 1rem 0 1.5rem 0;
   text-align: center;
-  font-size: 2.2rem;
+  font-size: 2.5rem;
+  color: rgba(255, 255, 255, 0.658);
 }
 
 #projects section{
@@ -93,6 +92,7 @@ h2 {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
+  color: rgba(255, 255, 255, 0.89);
 }
 
 .project_box {
@@ -110,13 +110,13 @@ h2 {
 
 .project_box:hover {
   border: 1px solid rgba(255, 255, 255, 0.829);
-  box-shadow: 0 0 2rem rgb(96, 116, 105);
+  box-shadow: 0 0 2rem rgb(107, 119, 112);
   color: rgb(96, 116, 105);
 }
 
 #about_me {
   /* display: flex; */
-  background-color: rgb(96, 116, 105);
+  background-color: rgb(107, 119, 112);
   color: rgba(0, 0, 0, 0.877);
   height: auto;
 }
@@ -128,19 +128,21 @@ h2 {
   padding-bottom: 1rem;
 }
 
-#about_me section div {
+#about_me section div, #about_me section p {
   display: flex;
   width: 30rem;
   height: 30rem;
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   padding: 1rem;
+  max-height: 30rem;
 }
 
 #semantically_disgusting {
-  border-right: 2px solid rgba(0, 0, 0, 0.877);
+  border-left: 2px solid rgba(0, 0, 0, 0.877);
+  width: 40rem;
 }
 
 #skills {
@@ -148,10 +150,46 @@ h2 {
   background-color: rgba(0, 0, 0, 0.877);
   padding-bottom: 1rem;
   height: 15rem;
+  text-align: center;
+}
+
+#skills a {
+  text-decoration: underline;
+}
+
+#skills p {
+  padding-bottom: 1rem;
+}
+
+#skillsets {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+}
+
+#skillsets div {
+  display: flex;
+  flex-direction: column;
+  width: 30rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+#skillsets h3 {
+  padding-bottom: .7rem;
+}
+
+#skillsets li {
+  padding-left: 1rem;
+  line-height: 1.2;
+  text-decoration: none;
+  list-style-type: none;
 }
 
 #contact {
-  background-color: rgb(96, 116, 105);
+  background-color: rgb(107, 119, 112);
   height: 10rem;
 }
 
@@ -162,10 +200,61 @@ h2 {
 
 #contact div a {
   text-align: center;
-  color: rgba(0, 0, 0, 0.877);
-  font-size: 1.4rem;
+  color: rgba(255, 255, 255, 0.89);
+  font-size: 1.8rem;
+  font-weight: 600;
 }
 
 #contact div a:hover {
-  color: rgba(255, 255, 255, 0.89);
+  color: rgba(0, 0, 0, 0.877);
+}
+
+@media only screen and (max-width: 950px) {
+
+  #splash {
+    flex-direction: column;
+    align-content: center;
+  }
+
+  h1 {
+    border:none;
+  }
+
+  #splash p {
+    max-width: fit-content;
+    margin-right: none;
+  }
+
+  #about_me section {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+
+  #semantically_disgusting {
+    border: none;
+  }
+
+  #about_me section div, #about_me section p {
+    width: auto;
+    height: auto;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  #nav ul li {
+    font-size: .8rem;
+  }
+
+  #about_me section div {
+    padding-bottom: 2rem;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  
+  h1 {
+    font-size: 3.5rem;
+  }
 }
